--- a/css/styles/slider-template.css
+++ b/css/styles/slider-template.css
@@ -127,8 +127,11 @@
   grid-template-rows: repeat(1, 1fr);
   overflow-x: scroll;
   scroll-behavior: smooth;
+  scrollbar-width: none;
 }
-
+.movies-list::-webkit-scrollbar {
+  display: none;
+}
 @media screen and (min-width: 768px) {
   .head-container {
     margin-left: 50px;
